fix: add apyhub secret reading and header return
